masstransit outbox eklendi

--- a/src/Products/Products.Infrastructure/Products.Infrastructure.csproj
+++ b/src/Products/Products.Infrastructure/Products.Infrastructure.csproj
@@ -7,14 +7,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+		<PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.2.5" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
         <PackageReference Include="MassTransit" Version="8.2.5" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
         <PackageReference Include="Refit.HttpClientFactory" Version="7.1.2" />
         <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="8.8.0" />
     </ItemGroup>
