--- a/src/Organizations/Organizations.Infrastructure/Organizations.Infrastructure.csproj
+++ b/src/Organizations/Organizations.Infrastructure/Organizations.Infrastructure.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.2.5" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
         <PackageReference Include="MassTransit" Version="8.2.5" />
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
