added outbox pattern with masstransit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 version: '3'
 services:
+  sqlserver:
+    image: mcr.microsoft.com/azure-sql-edge
+    container_name: sql
+    ports:
+      - "1433:1433"
+    environment:
+      ACCEPT_EULA: "1"
+      MSSQL_SA_PASSWORD: "Pass0rd"
+      MSSQL_PID: "Developer"
+      MSSQL_USER: "SA"
+    restart: unless-stopped
+    
   rabbitmq:
     image: rabbitmq:3-management-alpine
     container_name: 'rabbitmq'
