--- a/src/Products/Products.API/appsettings.json
+++ b/src/Products/Products.API/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../../../products-db.sql"
+    "DefaultConnection": "Data Source=.;User ID=SA;Password=Passw0rd;Database=products;Connect Timeout=30;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Serilog": {
     "MinimumLevel": {
