--- a/src/Organizations/Organizations.API/appsettings.json
+++ b/src/Organizations/Organizations.API/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../../../organizations-db.sql"
+    "DefaultConnection": "Data Source=.;User ID=SA;Password=Passw0rd;Database=organizations;Connect Timeout=30;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Serilog": {
     "MinimumLevel": {
